--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -2,16 +2,14 @@
 module(load="imuxsock")
 input(type="imuxsock" Socket="/var/run/rsyslog/dev/log" CreatePath="on")
 
-...
+$template myFormat,"%syslogtag% %msg%\n"
 
-$template template_date_format {
-    template("${HOST} ${MSGHDR}${MSG}\n");
-    template_escape(no);
-};
+$ActionFileDefaultTemplate myFormat
+
 #
 # Send your logs to stderr so that `docker logs` works
 #
 local1.*  {
-    /proc/self/fd/2;myFormat
+    /proc/self/fd/2
     stop
 }
